src/objects/Product_Grouping__c.object
<CustomObject>
    <description>To group PCL&apos;s into a hierarchy. For example, PCL&apos;s can be grouped to define a Format or PCL&apos;s can be grouped to define a category for warranty reporting (Fan Coil = PCLs 0012, 0065, etc)</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Grouping_Name__c</fullName>
        <formula>Product_Grouping__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Grouping Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Grouping_Type__c</fullName>
        <formula>Text(Product_Grouping__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Grouping Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product Grouping</label>
        <referenceTo>Product_Grouping__c</referenceTo>
        <relationshipLabel>Child Product Groupings</relationshipLabel>
        <relationshipName>Product_Groupings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Format</fullName>
                </value>
                <value>
                    <fullName>PCL</fullName>
                </value>
                <value>
                    <fullName>Warranty Reporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Grouping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Product_Grouping__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Grouping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groupings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>